--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,11 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
 See the end for copying conditions.
 
+* Version 1.5.3 (unreleased) [beta]
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 1.5.2 (released 2010-09-27) [beta]
 
 ** GSSAPI/GS2-KRB5: Support for MIT Kerberos for Windows GSS-API library.
