--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.5.4 (unreleased) [beta]
 
+** Update gnulib files.
+
 * Version 1.5.3 (released 2010-11-14) [beta]
 
 ** gsasl: Support for TLS channel bindings.
