--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
 See the end for copying conditions.
 
-* Version 1.5.5 (unreleased) [beta]
+* Version 1.5.5 (released 2010-12-09) [beta]
 
 ** API and ABI modifications.
 No changes since last version.
