--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,13 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
 See the end for copying conditions.
 
+* Version 1.6.0 (unreleased) [beta]
+
+** No changes since release candidate 1.5.5.
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 1.5.5 (released 2010-12-09) [beta]
 
 ** API and ABI modifications.
