--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.6.0 (unreleased) [beta]
+* Version 1.6.0 (released 2010-12-14) [beta]
 
 ** No changes since release candidate 1.5.5.
 
