--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2010-12-14  Simon Josefsson <simon@josefsson.org>
+
+	* lib/ChangeLog: Generated.
+
+2010-12-14  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, lib/NEWS: Version 1.6.0.
+
+2010-12-14  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, configure.ac, lib/NEWS, lib/configure.ac, lib/src/gsasl.h: 
+	Bump versions.
+
+2010-12-09  Simon Josefsson <simon@josefsson.org>
+
+	* ChangeLog: Generated.
+
 2010-12-09  Simon Josefsson <simon@josefsson.org>
 
 	* lib/ChangeLog: Generated.
