--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -1001,7 +1001,7 @@ Libgsasl.  The following example illustrates this scenario.
 AC_ARG_ENABLE(gsasl,
   AC_HELP_STRING([--disable-gsasl], [don't use GNU SASL]),
   gsasl=$enableval)
-if test "$gsal" != "no" ; then
+if test "$gsasl" != "no" ; then
   PKG_CHECK_MODULES(GSASL, libgsasl >= @value{VERSION},
     [gsasl=yes],
     [gsasl=no])
