--- a/lib/README
+++ b/lib/README
@@ -1,5 +1,5 @@
 GNU SASL LIBRARY README -- Important introductory notes.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
+Copyright (C) 2002-2011 Simon Josefsson
 See the end for copying conditions.
 
 The GNU SASL Library is a library that implements the Simple
@@ -38,6 +38,9 @@ Currently there is some support for the following mechanisms:
 The library should be portable to all C89 platforms.
 
 For updates to the project, see <http://www.gnu.org/software/gsasl/>.
+
+For any copyright year range specified as YYYY-ZZZZ in this package
+note that the range specifies every single year in that closed interval.
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
