--- a/lib/NEWS
+++ b/lib/NEWS
@@ -1,10 +1,13 @@
 GNU SASL LIBRARY NEWS -- History of user-visible changes.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 Simon Josefsson
 See the end for copying conditions.
 
 * Version 1.7.1 (unreleased) [beta]
 
 ** SAML changes reverted, will be kept on a separate branch.
+
+** libgsasl.pc: Add a Libs.private.
+Reported by Volker Grabsch <vog@notjusthosting.com>.
 
 ** API and ABI modifications.
 No changes since last version.
