--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 GNU SASL NEWS -- History of user-visible changes.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012 Simon Josefsson
 See the end for copying conditions.
 
 Note that changes to the GNU SASL Library is documented in lib/NEWS.
@@ -7,6 +7,12 @@ This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.7.1 (unreleased) [alpha]
+
+** gsasl: Ignore untagged responses during IMAP authentication.
+Patch from Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de>.
+
+** tests: Disable the test-poll self-test, it doesn't seem to work on Solaris.
+Reported by Dagobert Michelsen <dam@opencsw.org>.
 
 ** libgsasl: Implement OPENID20 mechanism for OpenID authentication.
 Following draft-ietf-kitten-sasl-openid-03.
