--- a/README
+++ b/README
@@ -13,7 +13,7 @@ lib/COPYING.LIB.  The GNU project typically uses the GNU General
 Public License (GPL) for libraries, and not the LGPL, but for this
 project we decided that we would get more help from the community if
 we used the LGPLv2.1+, as other free SASL implementations exists.  See
-also <http://www.gnu.org/licenses/why-not-lgpl.html>.
+also <https://www.gnu.org/licenses/why-not-lgpl.html>.
 
 The command-line application and test suite (src/, and tests/) are
 licensed under the GNU General Public License license version 3.0 (or
@@ -24,7 +24,7 @@ License version 1.3 (or later).
 
 If you need help to use GNU SASL, or wish to help others, you are
 invited to join our mailing list help-gsasl@gnu.org, see
-<http://lists.gnu.org/mailman/listinfo/help-gsasl>.
+<https://lists.gnu.org/mailman/listinfo/help-gsasl>.
 
 Currently there is some support for the following mechanisms:
 
@@ -69,7 +69,7 @@ please let me know so work duplication can be avoided.
   - Improve documentation
   - Port to Cyclone? CCured?
 
-For updates to the project, see <http://www.gnu.org/software/gsasl/>.
+For updates to the project, see <https://www.gnu.org/software/gsasl/>.
 
 For any copyright year range specified as YYYY-ZZZZ in this package
 note that the range specifies every single year in that closed interval.
