Use getpass-gnu instead of getpass to get a working getpass everywhere.
Solves problem on Mac OS X reported by Wim Lewis <wiml@hhhh.org>.

--- a/THANKS
+++ b/THANKS
@@ -41,6 +41,7 @@ Vincent Untz <vuntz@opensuse.org>
 Marco Maggi <marco.maggi-ipsu@poste.it>
 "carlo.bramix" <carlo.bramix@libero.it>
 Marc Santamaria <asgarath@gmail.com>
+Wim Lewis <wiml@hhhh.org>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
