--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,12 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002-2012 Simon Josefsson
 See the end for copying conditions.
 
-* Version 1.7.1 (unreleased) [alpha]
+* Version 1.7.2 (unreleased) [alpha]
+
+** API and ABI modifications.
+No changes since last version.
+
+* Version 1.7.1 (released 2012-02-09) [alpha]
 
 ** libgsasl: Implement OPENID20 mechanism for OpenID authentication.
 Following draft-ietf-kitten-sasl-openid-03.
